# tcrsift

./: README.md  deploy.sh  lint.sh  pyproject.toml  requirements.txt  test.sh
tcrsift/: __init__.py  cli.py  data.py  mnemonic.py  model.py  version.py
